Apply spacing correctly

--- a/packages/structures/src/DropdownMenu.css
+++ b/packages/structures/src/DropdownMenu.css
@@ -86,15 +86,13 @@
 			color: var(--✨divider-color);
 			block-size: var(--✨divider-thickness);
 			border-image: var(--✨divider-border-image);
+			margin-block: var(--✨divider-spacing);
 		}
 
 		/* Removes redundant dividers from the very first/last group and between adjacent groups */
 		&:where(:nth-child(1 of :is(.🥝DropdownMenuGroup, .🥝DropdownMenuItem)))::before,
 		&:where(:not(:has(+ .🥝DropdownMenuItem)))::after {
 			content: unset;
-			margin-block: var(
-				--✨divider-spacing
-			); /* Add spacing around dividers now that they don't overlap. */
 		}
 	}
 }
